se aseguraron cambios